@@ -1,4 +1,5 @@
 [1.5.7]
+- API Change: Added optional hostname argument to Net.newServerSocket method to allow specific ip bindings for server applications made with gdx.
 - API Change: GlyphLayout xAdvances now have an additional entry at the beginning. This was required to implement tighter text bounds. #3034
 
 [1.5.6]
